[package]
name = "twitch"
version = "0.1.0"
authors = ["Joshua Benuck <joshua_benuck@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
reqwest = "*"
dirs = "*"
url = "*"
failure = "*"
serde = "*"
serde_json = "*"
image = "*"
ggez = "*"
image_grid = { path = "../image_grid" }

[dependencies.rusqlite]
version = "0.20.0"
features = ["bundled"]